--- a/src/frontend/PetSpotR/Pages/Index.razor
+++ b/src/frontend/PetSpotR/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>PetSpotR</PageTitle>
 
-<h1>PetSpotR</h1>
+<div class="splash">
+    <img src="logo.svg" />
+</div>
 
-Welcome to PetSpotR!
+<h2>Reconnect with your lost pets using advanced AI</h2>
