--- a/src/frontend/PetSpotR/Shared/MainLayout.razor
+++ b/src/frontend/PetSpotR/Shared/MainLayout.razor
@@ -3,13 +3,11 @@
 <PageTitle>PetSpotR</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href ="/" target="_blank">Home</a>
+            <a href="/lost" target="_blank">Lost Pet</a>
+            <a href="/found" target="_blank">Found Pet</a>
         </div>
 
         <article class="content px-4">
