--- a/src/frontend/PetSpotR/Shared/MainLayout.razor
+++ b/src/frontend/PetSpotR/Shared/MainLayout.razor
@@ -4,11 +4,19 @@
 
 <div class="page">
     <main>
-        <div class="top-row px-4">
-            <a href ="/" target="_blank">Home</a>
-            <a href="/lost" target="_blank">Lost Pet</a>
-            <a href="/found" target="_blank">Found Pet</a>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/lost">Lost</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/found">Found</a>
+                </li>
+            </ul>
+        </nav>
 
         <article class="content px-4">
             @Body
