--- a/src/frontend/PetSpotR/Shared/MainLayout.razor.css
+++ b/src/frontend/PetSpotR/Shared/MainLayout.razor.css
@@ -15,6 +15,7 @@ nav {
     font-weight: 600;
     font-size: large;
     background-color: #43b0e1 !important;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 nav li {
