--- a/src/frontend/PetSpotR/Pages/Index.razor
+++ b/src/frontend/PetSpotR/Pages/Index.razor
@@ -9,6 +9,6 @@
 <h2>Reconnect with your lost pets using advanced AI</h2>
 
 <div class="buttons">
-    <a class="btn btn-primary btn-lg" role="button" href="/lost">I lost my pet</a>
-    <a class="btn btn-success btn-lg" role="button" href="/found">I found a pet</a>
+    <a class="btn btn-primary btn-lg" role="button" href="/lost">I <b>lost</b> my pet</a>
+    <a class="btn btn-success btn-lg" role="button" href="/found">I <b>found</b> a pet</a>
 </div>
