Update homepage splash

--- a/src/frontend/PetSpotR/Pages/Owner.razor
+++ b/src/frontend/PetSpotR/Pages/Owner.razor
@@ -1,9 +1,9 @@
 @page "/lost"
 
-<PageTitle>Owner</PageTitle>
+<PageTitle>Lost Pet</PageTitle>
 
-<h1>Owner</h1>
-
-Owner homepage
+<div class="splash">
+    <img src="lost.svg" />
+</div>
 
 <LostDog />
