Rename to LostPet

--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -4,7 +4,7 @@
 @using Microsoft.Extensions.Logging
 @using Dapr.Client
 @using PetSpotR.Models
-@inject ILogger<LostDog> Logger
+@inject ILogger<LostPet> Logger
 @inject IWebHostEnvironment Environment
 @inject NavigationManager NavigationManager
 
