--- a/src/frontend/PetSpotR/Pages/Shelter.razor
+++ b/src/frontend/PetSpotR/Pages/Shelter.razor
@@ -1,7 +1,9 @@
 @page "/found"
 
-<PageTitle>Shelter</PageTitle>
+<PageTitle>Found Pet</PageTitle>
 
-<h1>Shelter</h1>
+<div class="splash">
+    <img src="found.svg" />
+</div>
 
-Shelter homepage
+<FoundPet />
