--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -48,7 +48,7 @@
         }
         <h2>Step 3: Submit lost pet for AI training</h2>
         <div class="form-group row">
-            <div class="col-sm-10">
+            <div class="col-sm">
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
             </div>
         </div>
