--- a/src/frontend/PetSpotR/Pages/FoundPet.razor
+++ b/src/frontend/PetSpotR/Pages/FoundPet.razor
@@ -10,11 +10,27 @@
 
 <EditForm Model="@petModel" OnSubmit="@HandleSubmit" >
     <div class="form-container">
-        <h2>Step 1: Upload an image of the pet you found</h2>
+        <h2>Step 1: Tell us about the pet you found</h2>
+        <div class="form-group row justify-content-center">
+            <label for="petType" class="col-2 col-form-label">Pet Type</label>
+            <div class="col-4">
+                <InputSelect id="type" @bind-Value="petModel.Type">
+                    <option>Dog</option>
+                    <option>Cat</option>
+                </InputSelect>
+            </div>
+        </div>
+        <div class="form-group row justify-content-center">
+            <label for="petBreed" class="col-2 col-form-label">Pet Breed (optional)</label>
+            <div class="col-4">
+                <InputText id="breed" @bind-Value="petModel.Breed" />
+            </div>
+        </div>
+        <h2>Step 2: Upload an image of the pet you found</h2>
         <div class="form-group row justify-content-center">
             <div class="col-4">
                 <label>
-                    <InputFile OnChange="@SelectImages" multiple accept=".png,.jpg,.jpeg" />
+                    <InputFile OnChange="@SelectImages" accept=".png,.jpg,.jpeg" />
                 </label>
             </div>
         </div>
@@ -22,7 +38,7 @@
         {
             <p>Uploading...</p>
         }
-        <h2>Step 2: Submit lost pet for AI prediction</h2>
+        <h2>Step 3: Submit lost pet for AI prediction</h2>
         <div class="form-group row">
             <div class="col-sm">
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
@@ -34,7 +50,7 @@
 @code {
     private List<IBrowserFile> loadedImages = new();
     private long maxFileSize = 1024 * 1000;
-    private int maxAllowedFiles = 20;
+    private int maxAllowedFiles = 1;
     private bool isLoading;
 
     private PetModel petModel = new();
@@ -45,8 +61,55 @@
         Logger.LogInformation("Form submitted");
 
         // Process the form
+        var daprClient = new DaprClientBuilder().Build();
 
-        NavigationManager.NavigateTo("/submit");
+        foreach (var image in loadedImages)
+        {
+            var stream = image.OpenReadStream(maxFileSize);
+
+            MemoryStream ms = new MemoryStream();
+            await stream.CopyToAsync(ms);
+
+            var filename = $"{Guid.NewGuid().ToString()}{Path.GetExtension(image.Name)}";
+
+            try
+            {
+                Logger.LogInformation("Uploading file: {Filename}", image.Name);
+                await daprClient.InvokeBindingAsync(
+                    bindingName: "images",
+                    operation: "create",
+                    data: ms.ToArray(),
+                    metadata: new Dictionary<string, string>
+                    {
+                        { "contentType", image.ContentType },
+                        { "blobName", filename }
+                    }
+                );
+            }
+            catch (Exception ex)
+            {
+                Logger.LogError("File: {Filename} Error: {Error}", image.Name, ex.Message);
+            }
+
+            try {
+                // Logger.LogInformation("Publishing event");
+                await daprClient.PublishEventAsync(
+                    pubsubName: "pubsub",
+                    topicName: "foundPet",
+                    data: new Dictionary<string, string>
+                    {
+                        { "imagePath", filename },
+                        { "type", petModel.Type },
+                        { "breed", petModel.Breed }
+                    }
+                );
+            } catch (Exception ex) {
+                Logger.LogError("Error: {Error}", ex.InnerException);
+                throw ex;
+            }
+        }
+
+        NavigationManager.NavigateTo("/submit/found");
     }
 
     private async Task SelectImages(InputFileChangeEventArgs e)
