--- a/src/frontend/PetSpotR/Pages/FoundPet.razor
+++ b/src/frontend/PetSpotR/Pages/FoundPet.razor
@@ -112,7 +112,7 @@
         NavigationManager.NavigateTo("/submit/found");
     }
 
-    private async Task SelectImages(InputFileChangeEventArgs e)
+    private void SelectImages(InputFileChangeEventArgs e)
     {
         isLoading = true;
         loadedImages.Clear();
