--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -109,7 +109,7 @@
         NavigationManager.NavigateTo("/submit");
     }
 
-    private async Task SelectImages(InputFileChangeEventArgs e)
+    private void SelectImages(InputFileChangeEventArgs e)
     {
         isLoading = true;
         loadedImages.Clear();
