--- a/src/frontend/PetSpotR/Pages/SubmitLost.razor
+++ b/src/frontend/PetSpotR/Pages/SubmitLost.razor
@@ -7,4 +7,4 @@
 </div>
 
 <h2>Thank you for reporting your lost pet!</h2>
-<p>Our advanced AI model is being updated, and you will receive an email if your pet is fouund.</p>
+<p>Our advanced AI model is being fine-tuned. You will receive an email if your pet is found.</p>
