Add local bindings

--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -96,7 +96,8 @@
                     metadata: new Dictionary<string, string>
                     {
                         { "contentType", image.ContentType },
-                        { "blobName", filename }
+                        { "blobName", filename },
+                        { "fileName", filename }
                     }
                 );
             }
