Prep dotnet code

--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -110,8 +110,8 @@
 
         }
 
-        await petModel.SavePetStateAsync(daprClient, "pets");
-        await petModel.PublishLostPetAsync(daprClient, "pubsub");
+        await petModel.SavePetStateAsync(daprClient);
+        await petModel.PublishLostPetAsync(daprClient);
 
         NavigationManager.NavigateTo("/submit");
     }
