--- a/src/frontend/PetSpotR/Pages/LostPet.razor
+++ b/src/frontend/PetSpotR/Pages/LostPet.razor
@@ -24,8 +24,36 @@
                 <InputSelect id="type" @bind-Value="petModel.Type">
                     <option>Dog</option>
                     <option>Cat</option>
+                    <option>Bird</option>
+                    <option>Other</option>
                 </InputSelect>
             </div>
+        </div>
+        <div class="form-group row justify-content-center">
+            <label for="petLocation" class="col-2 col-form-label">Pet Location</label>
+            <div class="col-4">
+                <InputSelect id="petLocation" @bind-Value="petModel.Location">
+                    <!-- add suburbs to the dropdown and give the options for suburbs located in Melbourne, Australia -->
+                    <option>Melbourne</option>
+                    <option>Geelong</option>
+                    <option>Bendigo</option>
+                    <option>Ballarat</option>
+                    <option>Shepparton</option>
+                    <option>Melton</option>
+                    <option>Mildura</option>
+                    <option>Warrnambool</option>   
+                    <option>Sunbury</option>
+                    <option>Pakenham</option>
+                    <option>Wodonga</option>
+                    <option>Traralgon</option>
+                    <option>Hoppers Crossing</option>
+                    <option>New York</option>
+                    <option>Los Angeles</option>
+                    <option>Chicago</option>
+                    <!-- Add more options as needed -->
+                </InputSelect>
+            </div>
+        </div>
         </div>
         <div class="form-group row justify-content-center">
             <label for="petBreed" class="col-2 col-form-label">Pet Breed</label>
