Add additional pets and fix wording on various pages

--- a/src/frontend/PetSpotR/Pages/Error.cshtml
+++ b/src/frontend/PetSpotR/Pages/Error.cshtml
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="content px-4">
             <h1 class="text-danger">Error.</h1>
-            <h2 class="text-danger">An error occurred while processing your request.</h2>
+            <h2 class="text-danger">We're sorry, an error occurred while processing your request.</h2>
 
             @if (Model.ShowRequestId)
             {
