--- a/src/frontend/PetSpotR/Pages/Index.razor
+++ b/src/frontend/PetSpotR/Pages/Index.razor
@@ -6,7 +6,7 @@
     <img src="logo.svg" />
 </div>
 
-<h2>Reconnect with your lost pets using advanced AI</h2>
+<h2>Helping owners reconnect with lost pets using advanced AI</h2>
 
 <div class="buttons">
     <a class="btn btn-primary btn-lg" role="button" href="/lost">I <b>lost</b> my pet</a>
