--- a/src/frontend/PetSpotR/Pages/SubmitFound.razor
+++ b/src/frontend/PetSpotR/Pages/SubmitFound.razor
@@ -6,5 +6,5 @@
     <img src="found.svg" />
 </div>
 
-<h2>Thank you for reporting your found pet!</h2>
+<h2>Thank you for reporting a found pet!</h2>
 <p>Our advanced AI model will attempt to find a match, and alert you and the owner if one is found.</p>
