--- a/src/frontend/PetSpotR/Pages/SubmitLost.razor
+++ b/src/frontend/PetSpotR/Pages/SubmitLost.razor
@@ -6,5 +6,5 @@
     <img src="lost.svg" />
 </div>
 
-<h2>Thank you for reporting your lost pet!</h2>
-<p>Our advanced AI model is being fine-tuned. You will receive an email if your pet is found.</p>
+<h2>Thank you for reporting your lost pet.</h2>
+<p>We're using our advanced AI model to find a match. You will receive an email if your pet is found.</p>
